--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,7 @@ ehthumbs.db
 
 # Folder config file
 Desktop.ini
+*.ide
+DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/db.lock
+DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/storage.ide-shm
+DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/storage.ide-wal
