--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,4 @@ Desktop.ini
 DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/db.lock
 DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/storage.ide-shm
 DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/storage.ide-wal
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
