--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/db.lock
 DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/storage.ide-shm
 DrinkWater/.vs/DrinkWater/v16/Server/sqlite3/storage.ide-wal
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
