--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,5 @@ DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
