--- a/DrinkWater/DrinkWaterUnitTests/DrinkWaterUnitTests.csproj
+++ b/DrinkWater/DrinkWaterUnitTests/DrinkWaterUnitTests.csproj
@@ -13,6 +13,10 @@
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0-alpha.1" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.261">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
