--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache.v2
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache.v2
+DrinkWater/.vs/DrinkWater/v16/TestStore/0/007.testlog
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
