--- a/DrinkWater/DrinkWaterProfileStatisticsUnitTests/DrinkWaterProfileStatisticsUnitTests.csproj
+++ b/DrinkWater/DrinkWaterProfileStatisticsUnitTests/DrinkWaterProfileStatisticsUnitTests.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.261">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
