--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,4 @@ DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache.v2
 DrinkWater/.vs/DrinkWater/v16/TestStore/0/007.testlog
 DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
+DrinkWater/.vs/DrinkWater/DesignTimeBuild/.dtbcache
